Minor code bracket alignment, improved user feedback.

--- a/WebGUI/html/Console.html
+++ b/WebGUI/html/Console.html
@@ -1312,12 +1312,16 @@
 		
 			//=====================================================================================
 			//formatTime ~
+			var monthArr_ = ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];
 			function formatTime(t) 
 			{
 				var date = new Date(t * 1000);
 				var mm = date.getMinutes() < 10?"0"+date.getMinutes():date.getMinutes();
-				var ss = date.getSeconds() < 10?"0"+date.getSeconds():date.getSeconds();				
-				return date.getHours() + ":" + mm + ":" + ss;
+				var ss = date.getSeconds() < 10?"0"+date.getSeconds():date.getSeconds();		
+				var m = monthArr_[date.getMonth()]; //+ 1).format("02d");;
+				var d = ('0' + date.getDate()).slice(-2); //zero pad day of month
+				var y = date.getFullYear() - 2000;
+				return d + m + y + "." + date.getHours() + ":" + mm + ":" + ss;
 			} //end formatTime()
 			
 			//=====================================================================================
